# klms-deploy

./: .gitignore  .gitmodules  DEPLOY.md  README.md  RESTRUCT.md  bootstrap.py  chartfile.yaml  jsonnetfile.json  jsonnetfile.lock.json  main.jsonnet  minikube-ingres-dns-config.sh  pyproject.toml  rebootapi.sh  requirements.txt  sample_input.json  setup.py  test_boot.py
SDE/: flink-test.yaml  install-strimzi.txt
apisix/: README.md  a6gw-ingress.yaml
imgrepo/: stelar-img-registry.yaml
keycloak/: README.keycloak-staging-account.txt  README.md  get_user_policies.py  kclib.py  keycloak-ingress.yaml  keycloak-staging-account.txt.asc  retrieve_operator_manifests.sh
lib/: README.md  airflow.libsonnet  certificate.libsonnet  ckan.libsonnet  db.libsonnet  images.libsonnet  k.libsonnet  kafka.libsonnet  keycloak.libsonnet  keycloak_quickstart.libsonnet  llmsearch.libsonnet  minio.libsonnet  network.libsonnet  ontop.libsonnet  pim.libsonnet  pl.jsonnet  play.libsonnet  podinit.libsonnet  postgresql.libsonnet  previewer.libsonnet  pvolumes.libsonnet  redis.libsonnet  registry.libsonnet  sde.libsonnet  sdemanager.libsonnet  services.libsonnet  stdports.libsonnet  stelar.libsonnet  stelar_ingress.libsonnet  stelarapi.libsonnet  superset.libsonnet  systeminit.libsonnet  transform.libsonnet  urllib.libsonnet  visualizer.libsonnet
lib2/: README.md
minio/: README.md  minio-ingress.yaml
ontop/: Dockerfile  Makefile  run_endpoint.sh  run_ontop.sh  start.sh
podinit/: Dockerfile  Makefile  README.md  entrypoint.sh
registry/: README.md  auth_config.yaml  config.yml  values.yaml  (+1 more)
(+368 files in other folders)
