[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stelar-deploy"
version = "0.1.0"
description = "STELAR KLMS deployment tooling"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "STELAR project" }
]
dependencies = [
  "kubernetes",
  "PyYAML",
  "typer",
  "jsonnet >= 0.20.0",
  "pydantic"
]

[project.scripts]
stelarctl = "stelar.deploy.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["stelar*"]
namespaces = true
